--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,11 @@
 						"esbenp.prettier-vscode",
 						"vscode-icons-team.vscode-icons",
 						"wayou.vscode-todo-highlight",
-						"formulahendry.code-runner"
+						"formulahendry.code-runner",
+						"ms-vscode.cpptools",
+						"ms-vscode.cpptools-extension-pack",
+						"ms-vscode.cpptools-themes",
+						"ms-vscode.cmake-tools"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 		"unwantedRecommendations": [
